[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "compass-agent"
version = "0.2.0"
description = "An AI agent that keeps you accountable to your goals"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "click",
    "python-dotenv",
]

[project.scripts]
compass = "main:cli"

[tool.setuptools]
py-modules = ["main", "agent", "database", "user_profile"]
